# surge-rack

metamodule/: CMakeLists.txt  plugin-mm.json
src/: VCO.cpp
